# BEE

./: -  .buildinfo  .coverage.integration  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  DORA.md  HISTORY.md  LICENSE  Pipfile  README-cwl-dictionary-parser.md  README-task-manager-server-pat  README.md  README.rst  RELEASE.rst  advanced_usage.html  aws_launcher.py  bee-template.yaml  bee_config.json  bee_cwl.html  bee_launcher.py  bee_vm.py  clamr-pull.tgz  clamr-wf.tgz  clamr.799148  cluster_manager.py  comd-mpi.tgz  commands.html  contribute.html  development.html  dora-template.yaml  error_logs.html  examples.html  flecsale.cwl  generate_graph.py  genindex.html  hpc-cloud-workflow-extra.json  hpc-cloud-workflow.cwl  index.html  install-virtualenv.sh  (+24 more)
.githooks/: pre-commit
.github/workflows/: ci-workflow.yml  docs.yml  integration.yml  publish-docs.yml  pylama.yml  (+5 more)
0.1.11dev3/: error_logs.html  rest_api.html
0.1.11dev3-test/: advanced_usage.html  commands.html  examples.html  genindex.html  index.html  installation.html  searchindex.js
0.1.11dev3-test2/: bee_cwl.html  contribute.html  development.html  objects.inv  search.html  visualization.html
0.1.11dev4/: advanced_usage.html  bee_cwl.html  commands.html  contribute.html  development.html  error_logs.html  examples.html  genindex.html  index.html  installation.html  objects.inv  rest_api.html  search.html  searchindex.js  visualization.html
0.1.11dev5/: advanced_usage.html  bee_cwl.html  commands.html  contribute.html  development.html  error_logs.html  examples.html  genindex.html  index.html  installation.html  objects.inv  rest_api.html  search.html  searchindex.js  visualization.html
0.1.12/: advanced_usage.html  commands.html  contribute.html  genindex.html  index.html  installation.html  objects.inv  search.html  searchindex.js  visualization.html
0.1.12dev0/: development.html  genindex.html  index.html  searchindex.js
0.1.12dev1/: advanced_usage.html  commands.html  contribute.html  development.html  examples.html  genindex.html  index.html  rest_api.html  search.html  searchindex.js  visualization.html
0.1.13dev0/: advanced_usage.html  bee_cwl.html  commands.html  contribute.html  development.html  error_logs.html  examples.html  genindex.html  index.html  installation.html  objects.inv  rest_api.html  search.html  searchindex.js  visualization.html
_sources/: bee_cwl.rst.txt  development.rst.txt  installation.rst.txt  rest_api.rst.txt
bee-image-builder/: README.md  build_bee_aws.sh  build_bee_vm.sh  interfaces  ubuntu-aws.json  ubuntu-qemu.json  ubuntu1404-aws.json  ubuntu1404-qemu-template.json  ubuntu1404-qemu.json
bee-launcher/: #bee_aws_launcher.py#  README.md  README_charliecloud.md  __main__.py  arm_bee_orc_ctl.py  aws_launcher.py  bee_aws.py  bee_aws_launcher.py  bee_cc.py  bee_cc_launcher.py  bee_charliecloud.py  bee_charliecloud_launcher.py  bee_ci_launcher.py  bee_cluster.py  bee_composer.py  bee_conf.json  bee_config_loader.py  bee_flow.py  bee_hot  bee_hot_storage  bee_hot_task  bee_launcher.py  bee_launcher_daemon.py  bee_node.py  bee_orc_ctl.py  bee_os.py  bee_os_launcher.py  bee_vm.py  bee_vm_launcher.py  beefile_loader.py  beeflow_loader.py  docker.py  efs-daemon.beefile  host.py  notes_charliecloud.md  qemu.py  start_ns.sh  tmp.py
bee-orchestrator/: bee_orc_ctl.py  bee_task.py  bee_vm.py  host.py  hypervisor.py  qmp.py
bee-translator/: tar_slurm.py
bee_launcher/: __main__.py  bee_launch.py  beefile_manager.py
bee_orchestrator/: __main__.py  bee_orc_ctl.py
bee_translator/: tar_slurm.py  translator.py
beedev-env/: pyvenv.cfg
beeflow/: __init__.py  beeflow.py  cli.py  cloud_launcher.py  task_manager.py  wf_manager.py
ci/: Dockerfile  README.md  batch_scheduler.sh  bee.sh  bee_config.sh  bee_config_scaling.sh  bee_flux_config.sh  bee_install.sh  bee_slurm_config.sh  bee_start.sh  deps_build.sh  deps_install.sh  docs.sh  env.sh  flux_install.sh  inner_integration_test.sh  integration_test.py  integration_test.sh  run.sh  slurm_start.sh  unit_tests.sh
clamr-pull/: clamr_wf.cwl
clamr-wf/: clamr_wf.cwl
comd-mpi/: comd.cwl
confs/: chameleoncloud-0.conf  chameleoncloud-1.conf  dora.conf  google-0.conf  google-1.conf  jupiter.conf
cwl/: blast-bee-arch.cwl  blast-bee-arch.json  blast-bee.cwl  blast-bee.json  cf-arch.cwl  cf-arch.json  cf-dora.cwl  cf-dora.json
doc/: BEE-tutorial-exercises.docx  README.md  README.rst  User Guide for BEE-AWS.md  User Guide for BEE-Charliecloud.md  User Guide for BEE-OpenStack.md  User Guide for BEE-VM.md  User Guide for Batch-Mode.md  User Guide for BeeFlow.md  User Guide for BeeSwarm.md  User Guide for building your own BEE-compatible Docker images.md  configuration.md  pipenv.md  poetry.md  summit.md
doc-src/: README.md  conf.py  index.rst
docs/: README.md  README.rst  bee_cwl.html  examples.html  index.html  installation.html  py-modindex.html  search.html  searchindex.js  summit.md
docs-test/: commands.html  index.html  installation.html  objects.inv  search.html  searchindex.js
example/: clamr-ffmpeg-example.tgz
examples/: Dockerfile.clamr-lanl-x86_64  beefile-pv.json  beefile-pvserver.json  beefile-vpic.json  by_hand.py  clamr-ffmpeg-build.tgz  para-pv.sh  para-tom-vpic.sh  request.py  test.beefile
sphinx/: Makefile  commands.rst  contribute.rst  index.rst
src/: pyproject.toml  setup.py
templates/: dora-setup.sh  dora-template.yaml  dora.jinja2  google-setup.sh  google-template.py  slurm.conf
test/: README.md  bee_wf_test.py  mocks.py  test_resource_manager.py  test_scheduler.py  test_scheduler_mars.py  test_scheduler_resource_allocation.py  test_scheduler_rest.py  test_slurm_worker.py  test_tm.py  test_wf_interface.py  test_wfm.py  wf_neo4j_test.py
test-tag/: advanced_usage.html  bee_cwl.html  contribute.html  error_logs.html  index.html  installation.html  rest_api.html  searchindex.js
test-tag-a/: examples.html  visualization.html
tools/: README.md  parse_print_cwl.py  validate_print_cwl.py  wf_validate_get_cwl.py
travis_ci/: Dockerfile  id_rsa  id_rsa.pub  push_results_to_repo.sh
(+1292 files in other folders)
