[tool.poetry]
name = "hpc-beeflow"
version = "0.1.9dev4"
description = "A software package for containerizing HPC applications and managing job workflows"


authors = [
    "BEE-LANL Dev Team <bee-dev@lanl.gov>"
]

readme = "README.rst"

repository = "https://github.com/lanl/BEE"

keywords = [
    "bee",
    "hpc",
    "workflow",
    "cluster",
    "computing"
]

classifiers = [
    "Environment :: Console",
    "Environment :: OpenStack",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring"
]

packages = [
    { include = "beeflow" }
]

[tool.poetry.scripts]
beeflow = 'beeflow.client.bee_client:main'
beecloud = 'beeflow.cloud_launcher:main'

[tool.poetry.dependencies]

# Python version (>=3.8.3, <=3.12.2)
python = ">=3.8.3,<=3.12.2"

# Package dependencies
Flask = { version = "^2.0" }
neo4j = { version = "^5" }
PyYAML = { version = "^6.0.1" }
flask_restful = "0.3.9"
cwl-utils = "^0.16"
APScheduler = "^3.6.3"
jsonpickle = "^2.2.0"
# Fix for urllib3 2.0 breaking change (similar error to this https://github.com/docker/docker-py/issues/3113)
requests = "<2.29.0"
requests-unixsocket = "^0.3.0"
python-daemon = "^2.3.1"
gunicorn = ">=20.1,<23.0"
# typer version 0.6 and above seem to be throwing an AssertionError with no
# attached info
typer = "^0.5.0"
# Seems to be required for Flux
cffi = "^1.15.1"
celery = { version = "^5.3.4", extras = ["redis", "sqlalchemy"] }
# Fix for poetry/docutils related bug
docutils = "0.18.1"

# Cloud optional dependencies
google-api-python-client = { version = "^2.66.0", optional = true }
python-openstackclient = { version = "^6.0.0", optional = true }
python-heatclient = { version = "^3.1.0", optional = true }

[tool.poetry.extras]
cloud_extras = ["google-api-python-client", "python-openstackclient", "python-heatclient"]

[tool.poetry.dev-dependencies]
# Developer dependencies
pycodestyle = { version = ">=2.5.0" }
# Newer version of pydocstyle break pylama
pydocstyle = "6.1.1"
pyflakes = "3.0.1"
pylama = "8.4.1"
pylint = "2.15.9"
pytest = "7.2.0"
pytest-mock = "3.3.1"
pytest-cov = "5.0.0"
# This is commented out until we can figure out why it's causing `poetry update` to loop forever
sphinx = "^6"
sphinx-rtd-theme = "^1.0"
cwltool = "^3.0.20200324120055"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
