[tool.poetry]
name = "hpc-beeflow"
version = "0.1.12dev"
description = "Orchestrates complex simulation workflows through coordination, execution, and monitoring, with support for containerized applications."


authors = [
    "BEE-LANL Dev Team <bee-dev@lanl.gov>"
]

readme = "README.rst"

repository = "https://github.com/lanl/BEE"

keywords = [
    "bee",
    "hpc",
    "workflow",
    "cluster",
    "computing"
]

classifiers = [
    "Environment :: Console",
    "Environment :: OpenStack",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Logging",
    "Topic :: System :: Monitoring"
]

packages = [
    { include = "beeflow" }
]

[tool.poetry.scripts]
beeflow = 'beeflow.client.bee_client:main'
beecloud = 'beeflow.cloud_launcher:main'

[tool.poetry.dependencies]

# Python version (>=3.11, <=3.14)
python = ">=3.11,<=3.14"

# Package dependencies
Flask = { version = "^2.0" }
fastapi = "0.115.8"
uvicorn = { version = "0.27.1" }
pydantic = ">=2.0.0,<3.0.0"
neo4j = { version = "^5" }
PyYAML = { version = "^6.0.1" }
flask_restful = "0.3.9"
cwl-utils = "^0.16"
APScheduler = "^3.6.3"
jsonpickle = "^2.2.0"
tabulate = "^0.9.0"
# Fix for urllib3 2.0 breaking change (similar error to this https://github.com/docker/docker-py/issues/3113)
requests = "^2.32.3"
python-daemon = "^2.3.1"
gunicorn = ">=20.1,<23.0"
# typer version 0.6 and above seem to be throwing an AssertionError with no
# attached info
typer = "^0.5.0"
# setting click below 8.3.0 avoids a crashing bug with typer version
click = "8.1.7"
# Seems to be required for Flux
cffi = "^1.15.1"
celery = { version = "^5.3.4", extras = ["redis", "sqlalchemy"] }
# Fix for poetry/docutils related bug
docutils = "0.18.1"
graphviz = "^0.20.3"
networkx = "3.5"


# Cloud optional dependencies
google-api-python-client = { version = "^2.66.0", optional = true }
python-openstackclient = { version = "^6.0.0", optional = true }
python-heatclient = { version = "^3.1.0", optional = true }
requests-unixsocket2 = "^0.4.2"
pylint = "3.3.6"
pre-commit = "3.5.0"
mpi4py = "^4.1.1"

[tool.poetry.extras]
cloud_extras = ["google-api-python-client", "python-openstackclient", "python-heatclient"]

[tool.poetry.group.dev.dependencies]
# Developer dependencies
pylint = "3.3.6"
pytest = "7.2.0"
pytest-mock = "3.3.1"
pytest-cov = "5.0.0"
# This is commented out until we can figure out why it's causing `poetry update` to loop forever
sphinx = "^6"
sphinx-rtd-theme = "^1.0"
cwltool = "^3.0.20200324120055"
httpx = "^0.28.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
